...
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ofn-vj-yOH" customClass="AnswerButton" customModule="ControlTask" customModuleProvider="target
                                            <rect key="frame" x="0.0" y="0.0" width="95" height="50"/>
                                            <color key="backgroundColor" red="0.0" green="0.53504548279999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                            <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                            <state key="normal" title="Valid">
                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                            </state>
                                            <variation key="heightClass=compact">
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                            </variation>
                                            <connections>
...
                                        </button>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rLL-IH-PQv" customClass="AnswerButton" customModule="ControlTask" customModuleProvider="target
                                            <rect key="frame" x="0.0" y="65" width="95" height="50"/>
                                            <color key="backgroundColor" red="0.0" green="0.53504548279999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                            <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                            <state key="normal" title="Invalid">
                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                            </state>
                                            <variation key="heightClass=compact">
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                            </variation>
                                            <connections>
...
