...
                                    <constraints>
                                        <constraint firstAttribute="height" constant="66" id="7Mo-1f-91E"/>
                                        <constraint firstAttribute="width" constant="180" id="dAM-hm-Si4"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                    <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                    <state key="normal" title="Continue">
                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                    </state>
                                    <connections>
                                        <action selector="continueButtonPressed:" destination="-1" eventType="touchUpInside" id="L01-Up-g6a"/>
                                    </connections>
                                </button>
...
