...
                        </stackView>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aNh-ud-cla">
                            <rect key="frame" x="579" y="540" width="215" height="49"/>
                            <color key="backgroundColor" red="0.0" green="0.53504548279999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                            <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                            <state key="normal" title="Let's get started!">
                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            </state>
                            <connections>
                                <action selector="getStartedButtonPressed:" destination="-1" eventType="touchUpInside" id="fcT-xo-CWk"/>
                            </connections>
                        </button>
...
