...
                    <color key="backgroundColor" red="0.0" green="0.53504548279999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="63" id="Wnp-3s-4JB"/>
                        <constraint firstAttribute="width" constant="98" id="v0z-Fe-ToW"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                    <state key="normal" title="Go!">
                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                    <connections>
                        <action selector="goButtonPressed:" destination="-1" eventType="touchUpInside" id="QD3-Ep-QEd"/>
                    </connections>
                </button>
...
